--- a/ICT_Project_14_10_24_Best_Model.ipynb
+++ b/ICT_Project_14_10_24_Best_Model.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPa0ATZnadGWEdqs7JYl/Wz",
+      "authorship_tag": "ABX9TyOwskTKw7C5d3knavNrxbyz",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -4342,6 +4342,150 @@
       ],
       "metadata": {
         "id": "Cr6LEMR8_AJp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "---\n",
+        "---"
+      ],
+      "metadata": {
+        "id": "Pcv7B_eJBIgG"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import matplotlib.pyplot as plt\n",
+        "import seaborn as sns\n",
+        "from sklearn.compose import ColumnTransformer\n",
+        "from sklearn.pipeline import Pipeline\n",
+        "from sklearn.preprocessing import OneHotEncoder\n",
+        "from sklearn.metrics import r2_score,mean_absolute_error\n",
+        "from sklearn.metrics import accuracy_score\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression,Ridge,Lasso\n",
+        "from sklearn.neighbors import KNeighborsRegressor\n",
+        "from sklearn.tree import DecisionTreeRegressor\n",
+        "from sklearn.ensemble import RandomForestRegressor,GradientBoostingRegressor,AdaBoostRegressor,ExtraTreesRegressor\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "from sklearn.svm import SVR\n",
+        "from xgboost import XGBRegressor\n",
+        "\n",
+        "df=pd.read_csv('/content/Weather Training Data.csv')\n",
+        "df=df.drop(['row ID'],axis=1)\n",
+        "df_reg_random=df.copy()\n",
+        "\n",
+        "columns_numerical=['MinTemp', 'MaxTemp', 'Rainfall', 'Evaporation', 'Sunshine', 'WindGustSpeed',\n",
+        "       'WindSpeed9am', 'WindSpeed3pm', 'Humidity9am', 'Humidity3pm',\n",
+        "       'Pressure9am', 'Pressure3pm', 'Cloud9am', 'Cloud3pm', 'Temp9am',\n",
+        "       'Temp3pm']\n",
+        "\n",
+        "from sklearn.linear_model import LinearRegression\n",
+        "for column in columns_numerical:\n",
+        "  # Create a copy of the dataframe\n",
+        "  temp_df = df_reg_random.copy()\n",
+        "\n",
+        "  # Separate rows with and without missing values for the target column\n",
+        "  df_not_missing = temp_df.dropna(subset=[column])\n",
+        "  df_missing = temp_df[temp_df[column].isnull()]\n",
+        "\n",
+        "  # Check if there are any missing values in the current column\n",
+        "  if df_missing.empty:\n",
+        "    continue\n",
+        "\n",
+        "  # Define X (features) and y (target) for training\n",
+        "  X_train = df_not_missing[['RainTomorrow']]  # Assuming 'RainTomorrow' is a feature correlated with missing values\n",
+        "  y_train = df_not_missing[column]\n",
+        "\n",
+        "  # Create and train a linear regression model\n",
+        "  regressor = LinearRegression()\n",
+        "  regressor.fit(X_train, y_train)\n",
+        "\n",
+        "  # Predict missing values\n",
+        "  X_missing = df_missing[['RainTomorrow']]\n",
+        "  df_missing[column] = regressor.predict(X_missing)\n",
+        "\n",
+        "  # Replace missing values in the original dataframe\n",
+        "  df_reg_random.loc[df_reg_random[column].isnull(), column] = df_missing[column]\n",
+        "\n",
+        "categorical_columns = ['WindGustDir', 'WindDir9am', 'WindDir3pm', 'RainToday']\n",
+        "\n",
+        "for column in categorical_columns:\n",
+        "  # Calculate the frequency distribution of non-missing values\n",
+        "  value_counts = df_reg_random[column].value_counts(normalize=True)\n",
+        "\n",
+        "  # Sample from the distribution to fill missing values\n",
+        "  df_reg_random[column].fillna(pd.Series(np.random.choice(value_counts.index, size=len(df_reg_random[column]), p=value_counts.values)), inplace=True)\n",
+        "\n",
+        " df_reg_random_cap_log = df_reg_random.copy()\n",
+        "\n",
+        "columns_to_cap = ['MinTemp', 'MaxTemp', 'Humidity9am', 'Humidity3pm', 'Pressure9am', 'Pressure3pm', 'Temp9am', 'Temp3pm']\n",
+        "columns_to_log_transform = ['Rainfall', 'Evaporation', 'WindGustSpeed', 'WindSpeed9am', 'WindSpeed3pm']\n",
+        "\n",
+        "\n",
+        "for column in columns_to_cap:\n",
+        "    Q1 = df_reg_random_cap_log[column].quantile(0.25)\n",
+        "    Q3 = df_reg_random_cap_log[column].quantile(0.75)\n",
+        "    IQR = Q3 - Q1\n",
+        "    lower_bound = Q1 - 1.5 * IQR\n",
+        "    upper_bound = Q3 + 1.5 * IQR\n",
+        "\n",
+        "    df_reg_random_cap_log[column] = np.where(df_reg_random_cap_log[column] > upper_bound, upper_bound,\n",
+        "                                         np.where(df_reg_random_cap_log[column] < lower_bound, lower_bound,\n",
+        "                                                  df_reg_random_cap_log[column]))\n",
+        "\n",
+        "for column in columns_to_log_transform:\n",
+        "    Q1 = df_reg_random_cap_log[column].quantile(0.25)\n",
+        "    Q3 = df_reg_random_cap_log[column].quantile(0.75)\n",
+        "    IQR = Q3 - Q1\n",
+        "    lower_bound = Q1 - 1.5 * IQR\n",
+        "    upper_bound = Q3 + 1.5 * IQR\n",
+        "\n",
+        "    df_reg_random_cap_log.loc[df_reg_random_cap_log[column] > upper_bound, column] = np.log1p(df_reg_random_cap_log.loc[df_reg_random_cap_log[column] > upper_bound, column]+1)\n",
+        "    df_reg_random_cap_log.loc[df_reg_random_cap_log[column] < lower_bound, column] = np.log1p(df_reg_random_cap_log.loc[df_reg_random_cap_log[column] < lower_bound, column]+1)\n",
+        "\n",
+        "\n",
+        "dff=df_reg_random_cap_log.copy()\n",
+        "\n",
+        "X=dff.drop('RainTomorrow',axis=1)\n",
+        "y=dff['RainTomorrow']\n",
+        "\n",
+        "\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "\n",
+        "X_train,X_test,y_train,y_test=train_test_split(X,y,test_size=0.2,random_state=42)\n",
+        "\n",
+        "step1 = ColumnTransformer(transformers=[\n",
+        "    ('col_tnf',OneHotEncoder(sparse_output=False,drop='first'),[0,6,8,9,20])\n",
+        "],remainder='passthrough')\n",
+        "#[0,6,8,9,20] are columsn to be encoded\n",
+        "step2 = RandomForestClassifier(n_estimators=100,\n",
+        "                              random_state=3,\n",
+        "                              max_samples=0.5,\n",
+        "                              max_features=0.75,\n",
+        "                              max_depth=15)\n",
+        "pipe = Pipeline([\n",
+        "    ('step1',step1),\n",
+        "    ('step2',step2)\n",
+        "])\n",
+        "\n",
+        "pipe.fit(X_train,y_train)\n",
+        "\n",
+        "y_pred = pipe.predict(X_test)\n",
+        "\n",
+        "import pickle\n",
+        "\n",
+        "pickle.dump(dff,open('dff.pkl','wb'))\n",
+        "pickle.dump(pipe,open('pipe.pkl','wb'))\n"
+      ],
+      "metadata": {
+        "id": "_WrkUyMQBJIg"
       },
       "execution_count": null,
       "outputs": []
